# asfald

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build.yml  ci.yml  conventional_commits.yml  pre-commit.yml  release-please.yml  run_tests.yml
docker/: build.linux-static.Dockerfile
src/: asfaload_mirror.rs  checksum.rs  cli.rs  client.rs  downloader.rs  error.rs  hasher.rs  index.rs  lib.rs  logger.rs  main.rs  repo_checksums.rs  utils.rs
src/index/: json.rs
tests/: asfald.rs  asfd.rs  integration_test.rs  tests_with_index.rs
tests/data/: mirror2
tests/data/mirror1/localhost:9988/asfaload/asfald/releases/download/v0.1.0/: asfaload.index.json  checksums.txt  checksums512.txt
tests/data/server1/asfaload/asfald/releases/download/release-without-index/: checksums.txt  file_without_index
tests/data/server1/asfaload/asfald/releases/download/v0.1.0/: archive.tgz  checksums.txt  checksums512.txt  chksum_modified_in_release  f01  f04  f05  f06  f07  f08  f09  f10  install.sh  invalid_chksum_on_mirror  on_server_checksums_but_not_index
tests/data/server1/checksums_with_binary_indicator/: checksums.txt  the_file.txt
tests/data/server1/checksums_with_path/: checksums.txt
tests/data/server1/invalid_checksum/: checksums.txt
tests/data/server1/no_checksum/: checksums.txt
tests/data/server1/remote_p_file_pattern/: the_file.txt
tests/data/server2/remote_checksum/: checksums.txt
tests/data/valid/: checksums.txt
tests/scripts/: web_server.py
