[package]
name = "asfald"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# The testing feature is used to be able to build the binary using local mirrors as needed for tests.
# Using the cfg(test) was not sufficient, as it seems the build of the binary occurs outside of test.
# The solution was outlined at https://users.rust-lang.org/t/building-binary-for-tests-with-cfg-test/121984/2
# It requires to define the feature "testing", to run the tests with cargo test -F testing, and
# to set the attribute `#[cfg(any(test, feature = "testing"))]` for test only code and the attribute
# `#[cfg(not(any(test, feature = "testing")))]` for production only code
testing = []

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
console = "0.15.8"
digest = "0.10.7"
envsubst = "0.2.1"
futures = "0.3.31"
hex = "0.4.3"
indicatif = "0.17.9"
log = { version = "0.4.22", features = ["std"] }
md-5 = "0.10.6"
reqwest = { version = "0.12.9", features = [
  "stream",
  "rustls-tls",
  "json",
], default-features = false }
once_cell = "1.20.2"
sha1 = "0.10.6"
sha2 = "0.10.8"
tempfile = "3.14.0"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.133"
itertools = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
testdir = "0.9.3"

[profile.release]
lto = true
