[package]
name = "asfald"
version = "0.7.0"
edition = "2021"
authors = ["Asfaload"]
description = "A CLI utility to download files from GitHub releases with hash verification"
license = "MPLv2"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.48", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0.17"
url = "2.3"
sha2 = "0.10.9"
hex = "0.4"
indicatif = "0.18"
futures = "0.3"
mockito = "1.7.0"                                                # For testing

[dev-dependencies]
tempfile = "3.5"
assert_cmd = "2.0"
predicates = "3.0"
