[package]
name = "asfald"
version = "0.9.0"
edition = "2021"
authors = ["Asfaload"]
description = "A CLI utility to download files from GitHub releases with hash verification"
license = "MPLv2"

[dependencies]
reqwest = { version = "0.12.23", features = [
  "stream",
  "rustls-tls",
  "json",
], default-features = false }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.48", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "2.0.17"
url = "2.3"
sha2 = "0.10.9"
hex = "0.4"
indicatif = "0.18"
futures = "0.3"

[dev-dependencies]
indicatif = { version = "0.18", features = ["in_memory"] }
tempfile = "3.5"
assert_cmd = "2.0"
predicates = "3.0"
mockito = "1.7.0"
